Fixes to FindBugs errors and some NB suggestions (e.g., add @Override)
svn path=/trunk/; revision=45970


Former-commit-id: b43aaa6fbc8ec432669bcc3a5ab34894608773ed